--- a/frontend/src/ui/locales/de/generic.yml
+++ b/frontend/src/ui/locales/de/generic.yml
@@ -15,6 +15,8 @@ generic:
   apply: 'Übernehmen'
   discard-changes: 'Änderungen verwerfen'
   error: 'Fehler'
+  yes: 'Ja'
+  no: 'Nein'
   month:
     '0': 'Januar'
     '1': 'Februar'
