refactor some i18n keys

--- a/frontend/src/ui/locales/de/generic.yml
+++ b/frontend/src/ui/locales/de/generic.yml
@@ -17,6 +17,8 @@ generic:
   error: 'Fehler'
   yes: 'Ja'
   no: 'Nein'
+  move-up: 'Nach oben verschieben'
+  move-down: 'Nach unten verschieben'
   month:
     '0': 'Januar'
     '1': 'Februar'
