--- a/frontend/src/ui/locales/de/views/events.yml
+++ b/frontend/src/ui/locales/de/views/events.yml
@@ -68,16 +68,22 @@ events:
       pending-confirmation: 'Teilnahmebestätigung ausstehend'
     actions:
       show-user: 'Nutzer anzeigen'
+      contact-crew: 'Crew kontaktieren'
       move-to-waiting-list: 'Auf Warteliste setzen'
       add-to-crew: 'Zur Crew hinzufügen'
-      edit-registration: 'Anmeldung bearbeiten'
-      edit-slot: 'Slot bearbeiten'
-      delete-registration: 'Anmeldung löschen'
       add-registration: 'Anmeldung hinzufügen'
+      delete-registration: 'Anmeldung löschen'
+      edit-registration: 'Anmeldung bearbeiten'
       add-slot: 'Crewslot hinzufügen'
-      delete-slot: 'Slot löschen'
-      duplicate-slot: 'Slot duplizieren'
-      contact-crew: 'Crew kontaktieren'
+      delete-slot: 'Crewslot löschen'
+      edit-slot: 'Crewslot bearbeiten'
+      duplicate-slot: 'Crewslot duplizieren'
+      add-location: 'Reiseabschnitt hinzufügen'
+      delete-location: 'Reiseabschnitt löschen'
+      edit-location: 'Reiseabschnitt bearbeiten'
+      edit-start-location: 'Starthafen bearbeiten'
+      delete-eta: 'ETA löschen'
+      delete-etd: 'ETD löschen'
       generate-imo-list: 'IMO Liste generieren'
       generate-consumption-list: 'Verzehrliste generieren'
       generate-captain-list: 'Kapitänsliste generieren'
@@ -85,12 +91,6 @@ events:
       publish-crew: 'Crew veröffentlichen'
       reset-crew: 'Crew zurücksetzen'
       cancel-event: 'Veranstaltung absagen'
-      add-location: 'Reiseabschnitt hinzufügen'
-      edit-start-location: 'Starthafen bearbeiten'
-      edit-location: 'Reiseabschnitt bearbeiten'
-      delete-location: 'Reiseabschnitt löschen'
-      delete-eta: 'ETA löschen'
-      delete-etd: 'ETD löschen'
     secure-crew: 'Sichere Besatzung'
     empty-crew:
       title: 'Hier ist noch nichts...'
