load export templates dynamically from directory

--- a/frontend/src/ui/locales/de/views/events.yml
+++ b/frontend/src/ui/locales/de/views/events.yml
@@ -84,9 +84,7 @@ events:
       edit-start-location: 'Starthafen bearbeiten'
       delete-eta: 'ETA löschen'
       delete-etd: 'ETD löschen'
-      generate-imo-list: 'IMO Liste generieren'
-      generate-consumption-list: 'Verzehrliste generieren'
-      generate-captain-list: 'Kapitänsliste generieren'
+      exportToTemplate: '{template} exportieren'
       open-signup: 'Anmeldungen freischalten'
       publish-crew: 'Crew veröffentlichen'
       reset-crew: 'Crew zurücksetzen'
@@ -184,9 +182,7 @@ events:
       export: 'Export'
       show-event: 'Reise anzeigen'
       edit-event: 'Reise bearbeiten'
-      generate-imo-list: 'IMO Liste generieren'
-      generate-consumption-list: 'Verzehrliste generieren'
-      generate-captain-list: 'Kapitänsliste generieren'
+      exportToTemplate: '{template} exportieren'
       add-registration: 'Anmeldung hinzufügen'
       open-signup: 'Anmeldungen freischalten'
       publish-crew: 'Crew veröffentlichen'
