--- a/frontend/src/ui/locales/de/generic.yml
+++ b/frontend/src/ui/locales/de/generic.yml
@@ -65,3 +65,13 @@ generic:
     omnivore: 'Fleisch'
     vegetarian: 'Vegetarisch'
     vegan: 'Vegan'
+  validation:
+    required: 'Eingabe ist erforderlich'
+    max-length: 'Eingabe darf maximal {0} Zeichen lang sein'
+    min-length: 'Eingabe muss mindestens {0} Zeichen lang sein'
+    invalid-phone-number: 'Eingabe ist keine gültige Telefon Nummer'
+    invalid-email: 'Eingabe ist keine gültige Email Addresse'
+    invalid-name: 'Namen dürfen keine Zahlen oder Sonderzeichen enthalten'
+    must-not-include-lastname: 'Anzeigenamen dürfen nicht den Nachnamen enthalten'
+    before: 'Datum muss vor dem {} liegen'
+    after: 'Datum muss nach dem {} liegen'
