--- a/frontend/src/ui/locales/de/views/account.yml
+++ b/frontend/src/ui/locales/de/views/account.yml
@@ -2,58 +2,66 @@
 # messages used in account views
 # -----------------------------------
 account:
-  title: 'Meine Daten'
+  title: 'Profil'
   tab:
-    data: 'Persönliche Daten'
-    contact: 'Kontaktdaten'
-    qualifications: 'Qualifikationen'
-    emergency: 'Notfallinformationen'
-  data:
-    title-app: 'App'
-    personal:
-      title: 'Persönliche Daten'
-      first-name: 'Vorname'
-      middle-name: 'Zweiter Vorname'
-      last-name: 'Nachname'
-      birthday: 'Geboren am'
+    data: 'Meine Daten'
+    qualifications: 'Meine Qualifikationen'
+    settings: 'App Einstellungen'
+  personal:
+    title: 'Persönliche Daten'
+    degree: 'Title'
+    name: 'Name'
+    first-name: 'Vorname'
+    middle-name: 'Zweiter Vorname'
+    last-name: 'Nachname'
+    display-name:
+      label: 'Anzeigename'
+      hint: 'Solltest du mit einem anderen Namen angesprochen werden wollen, kannst du einen Anzeigenamen
+        angeben. Dieser wird in der App angezeigt und beim Kammerplan und der Getränkeliste verwendet.'
+    birth:
+      label: 'Geburtsdatum und -ort'
+      day: 'Geboren am'
       place-of-birth: 'Geburtsort'
-      gender:
-        label: 'Geschlecht'
-        values:
-          male: 'männlich'
-          female: 'weiblich'
-          diverse: 'divers'
-      passport-number: 'Personalausweis Nummer'
-      nationality: 'Nationalität'
-    display-name: 'Anzeigename'
-    diet:
-      title: 'Ernährung'
-      label: 'Ernährungsweise'
+    gender:
+      label: 'Geschlecht'
       values:
-        vegetarian: 'Vegetarisch'
-        vegan: 'Vegan'
-        omnivore: 'Fleisch'
-      intolerances: 'Unverträglichkeiten'
-    hint-name-passport:
-      title: 'Name und Personalausweis Nummer'
-      messages:
-        - 'Dein Name wie du ihn hier angibst, muss genau so auch auf deinem Ausweis stehen, da dieser auch zum 
-                Erstellen der IMO Liste verwendet wird. Bitte beachte, das du den Personalausweis bei Reisen mitführen 
-                musst!'
-        - 'Solltest du mit einem anderen Namen oder Spitznamen angesprochen werden wollen, kannst du einen 
-                abweichenden Anzeigenamen angeben. Dieser wird dann in der App angezeigt und auch beim Kammerplan und 
-                der Getränkeliste verwendet.'
-        - '{link}'
-      link:
-        label: 'Wo finde ich meine Personalausweis Nummer?'
-        url: 'https://commons.wikimedia.org/wiki/File:Personalausweis-nummer.png'
+        male: 'männlich'
+        female: 'weiblich'
+        diverse: 'divers'
+      hint: 'Mit welchem Geschlecht identifizierst du dich?'
+    passport:
+      number:
+        label: 'Personalaus- oder Passnummer'
+        hint: 'Bitte gib die Nummer eines offiziellen Ausweisdokuments an. Dies kann entweder dein Personalausweis
+          oder alternativ auch dein Reisepass sein.'
+        hint-link: 'So findest du deine Personalausweis Nummer'
+        link: 'https://commons.wikimedia.org/wiki/File:Personalausweis-nummer.png'
+      hint: 'Bitte beachte, dass du dein eingetragenes Ausweisdokument auf allen Reisen mitführen musst!'
+    nationality:
+      label: 'Nationalität'
+      hint: 'Deine Nationalität wird für das Erstellen der offiziellen Crewliste benötigt. Solltest du mehrere
+        Nationalitäten haben, gib hier bitte diejenige an, die auch auf deinem Ausweisdokumentes steht.'
+    hint: 'Alle Daten, die du hier angibst, müssen genau so auch auf deinem Ausweisdokument stehen, da diese zum Erstellen der
+      offiziellen Crew Liste verwendet werden.'
+  diet:
+    title: 'Ernährung'
+    label: 'Ernährungsweise'
+    values:
+      vegetarian: 'Vegetarisch'
+      vegan: 'Vegan'
+      omnivore: 'Fleisch'
+    hint: 'Bitte gib an, falls du dich vegetarisch oder vegan ernährst. Diese Information ist wichtig, damit die
+      Kombüse ausreichend planen kann.'
+    intolerances:
+      label: 'Unverträglichkeiten'
+      hint: 'Hier kannst du Unverträglichkeiten und Allergien angeben, die der Kombüse bekannt sein sollten.'
+    kitchen-info: 'Informationen für die Kombüse'
   contact:
-    mail-phone:
-      title: 'Email & Telefon'
-      email: 'Email'
-      phone: 'Telefon'
-      phone-work: 'Telefon (dienstlich)'
-      mobile: 'Mobil'
+    title: 'Kontakt Daten'
+    email: 'Email'
+    phone: 'Telefon Festnetz'
+    phone-work: 'Telefon dienstlich'
+    mobile: 'Telefon Mobil'
     address:
       title: 'Adresse'
       address-line1: 'Straße, Hausnr.'
@@ -61,32 +69,28 @@ account:
       zip: 'PLZ'
       city: 'Ort'
       country: 'Land'
-    hint-mail:
-      title: 'Du möchtest deine Email Adresse ändern?'
-      messages:
-        - 'Deine Email Adresse wird sowohl als Kontakt Email, als auch für den Login verwendet. Wenn du die Email 
-                Adresse ändern möchtest wende dich bitte ans {link}'
-      link: 'Büro'
+      hint: 'Bitte gib deine primäre Wohnanschrift an.'
+    hint-mail: 'Deine Email Adresse wird sowohl als Kontakt Email für Benachrichtigungen, als auch für deinen Login verwendet.
+      Wenn du sie ändern möchtest, schreib uns bitte eine Email, damit wir auch den Login für dich anpassen können.'
+    hint-phone: 'Wie können wir dich erreichen? Bitte gib mindestens eine Telefonnummer an: Festnetz, mobil oder dienstlich.'
   emergency:
+    title: 'Notfall Informationen'
     contact:
       title: 'Notfallkontakt'
       name: 'Name des Notfallkontakts'
       phone: 'Telefonnummer des Notfallkontakts'
-    medical:
-      title: 'Wichtige gesundheitliche Informationen'
-      diseases: 'Krankheiten'
-      medication: 'Medikamente'
-    hint-emergency-contact:
-      title: 'Notfall Informationen'
-      messages:
-        - 'Wenn auf einer Reise mal etwas passiert, ist es wichtig, dass jemand an Bord weiß, dass du bestimmte 
-                Krankheiten hast oder welche wichtigen Medikamente du benötigst. Außerdem kannst du einen Notfallkontakt
-                angeben, den wir kontaktieren können, falls du mal nicht mehr ansprechbar bist.'
-        - 'Deine Daten werden {encrypted} gespeichert und sind nur für autorisierte Personen einsehbar. In 
-                der Regel sind dies das Büro und der Kapitän der jeweiligen Reise.'
-        - '{hint-all-data-optional}'
-      encrypted: 'verschlüsselt'
-      hint-all-data-optional: 'All diese Angaben sind freiwillig und dienen deiner eigenen Sicherheit an Bord!'
+      hint: 'Im Notfall zählt jede Sekunde. Hier kannst du eine Person hinterlegen, die wir im Falle eines medizinischen
+        Notfalls oder einer anderen dringenden Situation kontaktieren können. Bitte gib Namen und Telefonnummer der Person an.'
+    diseases:
+      label: 'Krankheiten'
+      hint: 'Sollte während einer Reise etwas passieren, kann es wichtig sein, dass jemand an Bord über
+        eventuelle Krankheiten informiert ist, die besondere Behandlungen erfordern.'
+    medication:
+      label: 'Medikamente'
+      hint: 'Wenn auf einer Reise mal etwas passiert, ist es wichtig, dass jemand an Bord weiß, welche Medikamente du benötigst.'
+    hint-show: '[zum Ansehen klicken]'
+    hint-privacy: 'Alle Angaben sind freiwillig! Deine Daten werden verschlüsselt gespeichert und sind nur für
+      autorisierte Personen einsehbar!'
   qualifications:
     status-expires-on: 'Gültig bis'
     status-no-expires: 'Ohne Ablaufdatum'
