--- a/frontend/src/ui/locales/de/generic.yml
+++ b/frontend/src/ui/locales/de/generic.yml
@@ -14,6 +14,7 @@ generic:
   edit: 'Bearbeiten'
   delete: 'Löschen'
   apply: 'Übernehmen'
+  close: 'Schließen'
   discard-changes: 'Änderungen verwerfen'
   error: 'Fehler'
   yes: 'Ja'
@@ -66,6 +67,10 @@ generic:
     omnivore: 'Fleisch'
     vegetarian: 'Vegetarisch'
     vegan: 'Vegan'
+  theme:
+    system: 'Automatisch'
+    dark: 'Dunkel'
+    light: 'Hell'
   validation:
     required: 'Eingabe ist erforderlich'
     invalid: 'Eingabe enthält ungültige Zeichen'
